--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,38 @@
+
+
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+}
+
+.fieldset {
+  display: block;  
+}
+
+.fieldset + .fieldset {
+  margin-top: 1em;
+}
+
+.fieldset label {
+  display: inline-block;
+  width: 25%;
+  font-weight: bold;
+  font-size: 1.25em;
+  text-align: right;
+  padding-right: .25em;
+}
+
+.fieldset label + * {
+  display: inline-block;
+}
+
+.detail-controls {
+  padding-top: 1em;
+  text-align: center;
+}
+
+.detail-controls > * {
+  margin: .5em 1em;
+  text-align: center;  
 }
